--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "manifest_version": 2,
-    "name": "[your extension name here]",
-    "description": "[your extension description here]",
+    "name": "B-ify",
+    "description": "What's boppin",
     "version": "1.0",
     "content_scripts": [
         {
