Updated file name

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
                 "*://*/*"
             ],
             "js": [
-                "content.js"
+                "script.js"
             ],
             "run_at": "document_end"
         }
